
[package]
name = "tube"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tube"
path = "src/lib.rs"

[dependencies]
log = "0.4"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.28"
md5 = "0.7.0"
async-trait = "0.1.53"
futures = "0.3"

[dev-dependencies]
env_logger = "0.9"

tokio = "1.0"